# C_Bit_Field_Example

./: .gitignore  CMakeLists.txt  README.md  main.c
.templates/: CMakeLists.txt.j2
inc/: bitfield.h  common.h
src/: bitfield.c
test/: bitfield_test.c  bitfield_test.h  main.c
